<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="match_parent"
        android:layout_height="409dp"
        tools:srcCompat="@tools:sample/avatars" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="100dp"
            android:layout_toStartOf="@+id/timeLabel"
            android:text="@string/username"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:text="@string/time" />

    </RelativeLayout>

    <TextView
        android:id="@+id/captionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:text="@string/caption" />

    <TextView
        android:id="@+id/hashtagsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:text="@string/auto_hashtags" />

    <Button
        android:id="@+id/deletePostButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:onClick="deletePost"
        android:text="@string/delete"
        android:visibility="invisible" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deletePostButton" />

</LinearLayout>