<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/emailTextfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:autofillHints="Email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageSignup"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordTextfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextfield"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/confirmPasswordTextfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:autofillHints="Confirm Password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextfield"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/usernameTextfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:autofillHints="@string/username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextfield"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/bioTextfield"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="54dp"
        android:autofillHints="A short bio"
        android:ems="10"
        android:hint="@string/a_short_bio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextfield"
        tools:targetApi="o" />

    <Button
        android:id="@+id/gotoSignupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signup"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/progressBarSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bioTextfield" />

    <ProgressBar
        android:id="@+id/progressBarSignup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/RegisterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageSignup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_boy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLabel" />

    <TextView
        android:id="@+id/imageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/set_display_picture"
        app:layout_constraintStart_toEndOf="@+id/profileImageSignup"
        app:layout_constraintTop_toBottomOf="@+id/RegisterLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>