<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <TextView
        android:id="@+id/PostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="50dp"
        android:text="@string/post"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/commentsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PostLabel" />

    <RelativeLayout
        android:id="@+id/commentsLayout"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="80">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/leave_some_comments"
                android:maxLength="80" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/commentsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:onClick="submitComment"
            android:text="@string/comment" />
    </RelativeLayout>

    <Button
        android:id="@+id/buttonToProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/profile"
        app:layout_constraintEnd_toStartOf="@+id/buttonToGlobal"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="backToProfile"/>

    <Button
        android:id="@+id/buttonToGlobal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/global"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="backToGlobal"/>


</androidx.constraintlayout.widget.ConstraintLayout>