<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptionActivity">

    <TextView
        android:id="@+id/captionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp"
        android:text="@string/caption"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/postCaption"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionLabel"
        tools:srcCompat="@tools:sample/avatars" />

    <!--    <EditText-->
    <!--        android:id="@+id/captionText"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="54dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:layout_marginEnd="54dp"-->
    <!--        android:ems="10"-->
    <!--        android:gravity="start|top"-->
    <!--        android:inputType="textMultiLine"-->
    <!--        android:text="@string/write_a_caption"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/postCaption"-->
    <!--        android:maxLength="120"-->
    <!--        />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="54dp"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postCaption"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/captionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:hint="@string/write_a_caption"
            android:maxLength="120"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postCaption" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="10dp"
        android:onClick="cancelPost"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="10dp"
        android:onClick="submitPost"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/autoHashtagsSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="54dp"
        android:text="@string/auto_hashtags"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="54dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hashtagsLabel">
        <RadioButton
            android:id="@+id/radio_Cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cat"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/radio_Dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dog"
            android:onClick="onRadioButtonClicked" />
        <RadioButton
            android:id="@+id/radio_Others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Others"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBarCaption"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/postButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/hashtagsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/autoHashtagsSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
